name         : aesd-records
version      : 0.4.4.4
synopsis     : AESD Records
description  :
  Implementation of AESD Records API, include a skeletal server and client.
  .
  The executable program /aesd-server/ serves tab-separated-value files as AESD Records.  Its command-line arguments are (i) the WebSocket host address, (ii) the WebSocket port number, (iii) the directory where the tab-separated-value files reside, and (iv) the path to the journal file that persists data for future invocations.
  .
  The executable program /aesd-client-example/ prints out a model and creates a bookmark.  Its command-line arguments are (i) the WebSocket host address and (ii) the WebSocket port number.
license      : MIT
license-file : LICENSE
author       : Brian W Bush <brian.bush@nrel.gov>
maintainer   : Brian W Bush <brian.bush@nrel.gov>
copyright    : (c) 2016-18 Alliance for Sustainable Energy LLC
category     : Network
build-type   : Simple
cabal-version: >= 1.10

stability    : Stable
homepage     : https://github.com/NREL/AESD/libs/Haskell/records/
bug-reports  : https://github.com/NREL/AESD/issues/

extra-source-files:  ReadMe.md

source-repository head
  type    : git
  location: https://github.com/NREL/AESD.git
  subdir  : libs/Haskell/records

flag verbose
  description: Verbose logging.
  default    : False
 
library
  hs-source-dirs  : src
  exposed-modules : AESD.Records.Client
                    AESD.Records.Server
                    AESD.Records.Server.File
                    AESD.Records.Server.Manager
                    AESD.Types
                    AESD.Types.Bookmark
                    AESD.Types.Domain
                    AESD.Types.Filter
                    AESD.Types.Model
                    AESD.Types.Record
                    AESD.Types.Request
                    AESD.Types.Response
                    AESD.Types.Value
                    AESD.Types.Variable
                    Network.WebSockets.STM
  other-modules   : AESD.Types.Internal
  build-depends   : base >= 4.8 && < 4.9
                  , bytestring
                  , cereal
                  , containers
                  , data-default
                  , lens
                  , mtl
                  , protobuf
                  , regex-posix
                  , raft
                  , split
                  , stm
                  , uuid
                  , websockets
  default-language: Haskell2010
  if flag(verbose)
    cpp-options   : -DAESD_VERBOSE
  ghc-options     : -Wall -O2

executable aesd-file-server
  main-is         : MainServer.hs
  hs-source-dirs  : src
  build-depends   : base               
                  , bytestring
                  , cereal
                  , containers
                  , data-default
                  , directory
                  , filepath
                  , lens
                  , mtl
                  , protobuf
                  , regex-posix
                  , raft
                  , split
                  , stm
                  , uuid
                  , websockets
  buildable       : True               
  default-language: Haskell2010        
  if flag(verbose)
    cpp-options   : -DAESD_VERBOSE
  ghc-options     : -Wall -O2 -threaded

executable aesd-random-server
  main-is         : MainRandomServer.hs
  hs-source-dirs  : src
  build-depends   : base               
                  , bytestring
                  , cereal
                  , containers
                  , data-default
                  , lens
                  , mtl
                  , protobuf
                  , raft
                  , random
                  , split
                  , stm
                  , uuid
                  , websockets
  buildable       : True               
  default-language: Haskell2010        
  cpp-options     : -DAESD_THROTTLE=1000
  if flag(verbose)
    cpp-options   : -DAESD_VERBOSE
  ghc-options     : -Wall -O2 -threaded

executable aesd-client-example
  main-is         : MainClientExample.hs
  hs-source-dirs  : src
  build-depends   : base               
                  , bytestring
                  , cereal
                  , containers
                  , data-default
                  , lens
                  , mtl
                  , protobuf
                  , raft
                  , split
                  , stm
                  , uuid
                  , websockets
  buildable       : True               
  default-language: Haskell2010        
  if flag(verbose)
    cpp-options   : -DAESD_VERBOSE
  ghc-options     : -Wall -O2 -threaded
